# cleanPlutusProject

./: .gitignore  README.md  cabal.project  cleanPlutusProject.cabal  setup.sh
app/: Main.hs
plutus/: script.plutus
src/: PlutusExample.hs
testnet/keys/: genKeys.sh
